<resources>
    <string name="app_name">Model Manager</string>
    <string name="action_settings">Einstellungen</string>
    <string name="action_account">mein Konto</string>
    <string name="title_section_daily_business">Tag</string>
    <string name="title_section_my_models">Models</string>
    <string name="title_section_expenses">Ausgaben</string>
    <string name="title_section_cars">Fahrzeuge</string>
    <string name="title_section_bonuses">Prämien</string>
    <string name="title_section_vacation">Urlaub</string>
    <string name="title_section_training">Fortbildung</string>
    <string name="title_section_account">Konto</string>
    <string name="title_section_incidents">Ereignisse</string>
    <string name="title_section_teams">Teams</string>
    <string name="title_section_operation">Auslastung</string>
    <string name="title_section_movieproduction">Filmproduktion</string>
    <string name="button_refresh">Aktualisieren</string>
    <string name="button_save">Speichern</string>
    <string name="questionmark">\?</string>
    <string name="title_model_detail">Personalakte</string>
    <string name="title_account_detail">Kontoauszug</string>
    <string name="title_model_negotiation">Verhandlung</string>
    <string name="title_car_maintenance">Fahrzeugverwaltung</string>
    <string name="title_car_shopping">Fahrzeugeinkauf</string>
    <string name="title_movieproduction">Filmproduktion</string>
    <string name="imageDescription">Profilbild</string>
    <string name="messageOfferRejected">Unzureichendes Angebot</string>
    <string name="displaySomeModel">Ein geeignetes Model</string>
    <string name="labelName">Name</string>
    <string name="labelSum">Summe</string>
    <string name="labelFirstName">Vorname</string>
    <string name="labelLastName">Nachname</string>
    <string name="labelStatus">Status</string>
    <string name="labelSalary">Gehalt</string>
    <string name="labelBonus">Prämie</string>
    <string name="labelVacation">Urlaub</string>
    <string name="labelVacation4week">Urlaub / 4 Wochen</string>
    <string name="labelVacationRest">Resturlaub</string>
    <string name="labelCar">Auto</string>
    <string name="labelTeam">Team</string>
    <string name="labelNoTeam">kein Team</string>
    <string name="labelNewTeam">neues Team</string>
    <string name="labelTeamWork">Teamarbeit</string>
    <string name="labelTeamManagement">Team-Verwaltung</string>
    <string name="labelTeamLeader">Teamleiterin</string>
    <string name="labelTeamLeaderSubst">Stellv. Teamleiterin</string>
    <string name="labelTeamLeaderBonus">Vergütung</string>
    <string name="labelTeamBooked">Team\nausgeführt</string>
    <string name="labelTeamPipeline">Team\noffen</string>
    <string name="labelRequestsPipeline">Anfragen\noffen</string>
    <string name="labelAccept">OK</string>
    <string name="labelDoAccept">akzeptieren</string>
    <string name="labelNegotiate">verhandeln</string>
    <string name="labelFireImmmediately">fristlos kündigen</string>
    <string name="labelDeny">ablehnen</string>
    <string name="labelCreate">erstellen</string>
    <string name="labelOffer">anbieten</string>
    <string name="labelRemove">entfernen</string>
    <string name="labelSuggest">vorschlagen</string>
    <string name="labelReclaim">fordern</string>
    <string name="labelSave">speichern</string>
    <string name="labelAbort">abbrechen</string>
    <string name="labelRent">vermieten</string>
    <string name="labelPlay">spielen</string>
    <string name="labelTheBet">Spieleinsatz</string>
    <string name="labelBet1">Spieleinsatz1</string>
    <string name="labelBet2">Spieleinsatz2</string>
    <string name="labelBet3">Spieleinsatz3</string>
    <string name="labelPlayGame1">Namen zum Gesicht</string>
    <string name="labelPlayGame2">Gesicht zum Namen</string>
    <string name="labelPlayGame3">Namen erraten</string>
    <string name="labelGameNamedetect">Namen zum Gesicht</string>
    <string name="labelGameFacedetect">Gesicht zum Namen</string>
    <string name="labelGameGuessName">Namen erraten</string>
    <string name="labelGameNext">Weiterspielen</string>
    <string name="labelSummary">Zusammenfassung</string>
    <string name="descriptionGameNamedetect">Wählen Sie den richtigen Namen zum Gesicht.</string>
    <string name="descriptionGameFacedetect">Wählen Sie das richtige Gesicht zum Namen.</string>
    <string name="descriptionGameLost">Sie haben leider falsch geraten.</string>
    <string name="descriptionGameWon">Richtig!</string>
    <string name="descriptionGameConditions" formatted="false">
        Sie haben bisher %1s gewonnen.\n
        Mit dem "zurück" Button beenden Sie die Spielrunde.\n
        Wenn Sie richtig raten, bekommen Sie %2s\n
        Wenn Sie falsch raten, kostet Sie das %3s</string>
    <string name="descriptionGameContinue" formatted="false">
        Sie haben bisher %1s gewonnen.\n
        Mit dem "zurück" Button beenden Sie die Spielrunde.</string>
    <string name="descriptionGameSummary" formatted="false">
        Sie haben insgesamt %1s verloren.\n
        Mit dem "zurück" Button beenden Sie die Spielrunde.</string>
    <string name="labelBalance">Kontostand</string>
    <string name="labelCompanyCars">Firmenwagen im Fuhrpark</string>
    <string name="labelCompanyCar">Firmenwagen</string>
    <string name="labelCarTypes">Zum Kauf verfügbare Modelle</string>
    <string name="labelCarModel">Modell</string>
    <string name="labelLicensePlate">Zulassung</string>
    <string name="labelClass">Klasse</string>
    <string name="labelPrice">Preis</string>
    <string name="labelAge">Alter</string>
    <string name="labelValue">Wert</string>
    <string name="labelValueSale">Verkaufswert</string>
    <string name="labelRepairCost">Reparaturkosten</string>
    <string name="labelDriver">Fahrer</string>
    <string name="labelHistory">Vorgeschichte</string>
    <string name="labelBuy">kaufen</string>
    <string name="labelRepair">instandsetzen</string>
    <string name="labelTheRepair">Reparatur</string>
    <string name="labelTakeaway">wegnehmen</string>
    <string name="labelDeassign">abschreiben</string>
    <string name="labelSell">verkaufen</string>
    <string name="labelSale">Verkauf</string>
    <string name="labelTrash">verschrotten</string>
    <string name="labelHire">anwerben</string>
    <string name="labelFire">entlassen</string>
    <string name="labelInUse">in Benutzung</string>
    <string name="labelUnused">unbenutzt</string>
    <string name="labelGone">verloren</string>
    <string name="labelDefect">defekt</string>
    <string name="labelTotal">gesamt</string>
    <string name="labelDate">Datum</string>
    <string name="labelDay">Tag</string>
    <string name="labelAccSubject">Verwendungszweck</string>
    <string name="labelAmount">Betrag</string>
    <string name="labelTraining">Fortbildung</string>
    <string name="labelDuration">Dauer</string>
    <string name="labelTheOffer">Angebot</string>
    <string name="labelThePrice">Gage</string>
    <string name="labelRaise">Gehaltserhöhung</string>
    <string name="labelTheReclaim">Rückzahlung</string>
    <string name="labelToday">Heute</string>
    <string name="labelOnBoard">Angestellt seit</string>
    <string name="labelDismissal">Kündigung</string>
    <string name="labelStandardBonus">Standardprämien</string>
    <string name="labelStandardRaise">Gehaltserhöhung</string>
    <string name="labelSpendings">Lebenshaltung und Ausgaben</string>
    <string name="labelEvents">Ereignisse</string>
    <string name="labelTodayEvents">Heute</string>
    <string name="labelPastEvents">Ereignisprotokoll</string>
    <string name="labelSubstitute">Ersatz</string>
    <string name="labelPhotoSession_si">Fotosession</string>
    <string name="labelPhotoSession_pl">Fotosessions</string>
    <string name="labelMovieSession_si">Filmsession</string>
    <string name="labelMovieSession_pl">Filmsessions</string>
    <string name="labelTeamleadWork_si">Teamleiteraufgabe</string>
    <string name="labelTeamleadWork_pl">Teamleiteraufgaben</string>
    <string name="labelSession_si">Session</string>
    <string name="labelSession_pl">Sessions</string>
    <string name="labelNotification_si">Benachrichtigung</string>
    <string name="labelNotification_pl">Benachrichtigungen</string>
    <string name="labelIncident_si">Zwischenfall</string>
    <string name="labelIncident_pl">Zwischenfälle</string>
    <string name="labelRequest_si">Anfrage</string>
    <string name="labelRequest_pl">Anfragen</string>
    <string name="labelEarnings">Einnahmen</string>
    <string name="labelBuyNewCar">Neues Auto kaufen</string>
    <string name="labelModelsWithCar">Models mit Auto</string>
    <string name="labelModelsWithoutCar">Models ohne Auto</string>
    <string name="labelTaxInsurance">Steuern und Versicherung wöchentlich</string>
    <string name="labelMaxSpeed">Höchst-\ngeschwindigkeit</string>
    <string name="labelPower">Leistung</string>
    <string name="labelCylinders">Zylinder</string>
    <string name="labelCapacity">Hubraum</string>
    <string name="labelPercent">%</string>
    <string name="labelProgress">Fortschritt</string>
    <string name="labelPreparing">Bereite den neuen Tag vor&#8230;</string>
    <string name="labelPersonalFile">Personalakte</string>
    <string name="labelAccountStatement">Kontoauszug</string>
    <string name="labelExpenses">Ausgaben</string>
    <string name="labelIncomes">Einnahmen</string>
    <string name="labelCredit">Kredit</string>
    <string name="labelCreditRequest">Kreditanfrage</string>
    <string name="labelCreditPayback">Rückzahlung</string>
    <string name="labelCost">Kosten</string>
    <string name="labelTotalCost">Gesamtkosten</string>
    <string name="labelCostSoFar">Kosten bisher</string>
    <string name="labelApproximately">ca.</string>
    <string name="labelPreferences">Einstellungen</string>
    <string name="labelMovieproduction">Filmproduktion</string>
    <string name="labelMovieType">Filmart</string>
    <string name="labelStartDay">Drehbeginn</string>
    <string name="labelEndDay">Ende</string>
    <string name="labelStartMovieProduction">Neue Filmproduktion planen</string>
    <string name="labelStartProduction">planen</string>
    <string name="labelDailyPayment">tägliche Gage</string>
    <string name="labelActor">Darstellerin</string>
    <string name="labelEngagementForDay">Engage-\nment für Tag</string>
    <string name="labelRentalConditions">10 Wochenraten á</string>
    <string name="labelInRentalFor">vermietet für wöchentlich</string>
    <string name="labelMovieDailyPayments">Gagen geplant täglich</string>
    <string name="labelAbortMovie">Produktion abbrechen</string>
    <string name="labelQualityPhoto">Fotomodell</string>
    <string name="labelQualityMovie">Filmmodell</string>
    <string name="labelQualityTLead">Teamleiterin</string>
    <string name="labelHealth">Gesundheit</string>
    <string name="labelAmbition">Ehrgeiz</string>
    <string name="labelCriminal">Kriminelle Neigung</string>
    <string name="labelMood">Stimmung</string>
    <string name="labelErotic">erotische Ausstrahlung</string>
    <string name="labelAlreadyPlanned">geplant</string>
    <string name="labelOperationChart">Auslastungsplan</string>
    <string name="labelNotifyPaycheck">Benachrichtigung bei Gehaltszahlung</string>
    <string name="notifyPaycheck">notifyPaycheck</string>
    <string name="labelNotifySick">Benachrichtigung bei Krankmeldung</string>
    <string name="notifySick">notifySick</string>
    <string name="labelNotifyTraining">Benachrichtigung bei Abschluß einer Fortbildung</string>
    <string name="notifyTraining">notifyTraining</string>
    <string name="labelWorthIncrease">Wertsteigerungsfaktor</string>
    <string name="worthincrease">worthincrease</string>
    <string name="labelGeekMode">Geek Mode</string>
    <string name="geekMode">geekMode</string>
</resources>