<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <CheckBoxPreference
        android:key="notifyPaycheck"
        android:title="@string/labelNotifyPaycheck"
        android:defaultValue="true" />
    <CheckBoxPreference
        android:key="notifySick"
        android:title="@string/labelNotifySick"
        android:defaultValue="true" />
    <CheckBoxPreference
        android:key="notifyTraining"
        android:title="@string/labelNotifyTraining"
        android:defaultValue="true" />
    <EditTextPreference
        android:key="worthincrease"
        android:title="@string/labelWorthIncrease" />
    <CheckBoxPreference
        android:key="geekMode"
        android:title="@string/labelGeekMode"
        android:defaultValue="false" />
    
</PreferenceScreen>