<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

	<TableLayout
		android:id="@+id/modelOverviewTable"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/status_bar_include"
		android:layout_toRightOf="@id/imageView1"
	>

		<TableRow
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" >

			<TextView
				android:layout_width="160dp"
				android:layout_height="wrap_content"
				android:text="@string/labelSalary"
				android:textStyle="bold"
				android:padding="4dp"
				android:textAppearance="?android:attr/textAppearanceSmall" />

			<EditText
				android:id="@+id/editTextSalary"
				android:layout_width="100dp"
				android:layout_height="wrap_content"
				android:padding="4dp"
				android:inputType="numberDecimal"
			/>

			<ImageView
				android:id="@+id/standardRaiseIcon"
				android:layout_width="100dp"
				android:layout_height="wrap_content"
				android:layout_alignParentTop="true"
				android:paddingLeft="10dp"
				android:paddingRight="10dp"
				android:contentDescription="@string/imageDescription"
				android:src="@drawable/money2" />

		</TableRow>

		<TableRow
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" >

			<TextView
				android:layout_width="160dp"
				android:layout_height="wrap_content"
				android:text="@string/labelVacation4week"
				android:textStyle="bold"
				android:padding="4dp"
				android:textAppearance="?android:attr/textAppearanceSmall" />

			<EditText
				android:id="@+id/editTextVacation4week"
				android:layout_width="100dp"
				android:layout_height="wrap_content"
				android:padding="4dp"
				android:inputType="numberDecimal"
			/>

		</TableRow>

		<TableRow
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" >

			<TextView
				android:layout_width="160dp"
				android:layout_height="wrap_content"
				android:text="@string/labelVacationRest"
				android:textStyle="bold"
				android:padding="4dp"
				android:textAppearance="?android:attr/textAppearanceSmall" />

			<EditText
				android:id="@+id/editTextVacationRest"
				android:layout_width="100dp"
				android:layout_height="wrap_content"
				android:padding="4dp"
				android:inputType="numberDecimal"
			/>

		</TableRow>

		<TableRow
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" >

			<TextView
				android:layout_width="160dp"
				android:layout_height="wrap_content"
				android:text="@string/labelBonus"
				android:textStyle="bold"
				android:padding="4dp"
				android:textAppearance="?android:attr/textAppearanceSmall" />

			<EditText
				android:id="@+id/editTextBonus"
				android:layout_width="100dp"
				android:layout_height="wrap_content"
				android:padding="4dp"
				android:inputType="numberDecimal"
			/>

			<ImageView
				android:id="@+id/standardBonusIcon"
				android:layout_width="100dp"
				android:layout_height="wrap_content"
				android:layout_alignParentTop="true"
				android:paddingLeft="10dp"
				android:paddingRight="10dp"
				android:contentDescription="@string/imageDescription"
				android:src="@drawable/money2" />

		</TableRow>

		<TableRow
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" >

			<TextView
				android:layout_width="160dp"
				android:layout_height="wrap_content"
				android:text="@string/labelCar"
				android:textStyle="bold"
				android:padding="4dp"
				android:textAppearance="?android:attr/textAppearanceSmall" />

			<Spinner
				android:id="@+id/selectCar"
				android:layout_width="240dp"
				android:layout_height="wrap_content" />

		</TableRow>

		<TableRow
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" >

			<TextView
				android:layout_width="160dp"
				android:layout_height="wrap_content"
				android:text="@string/labelTraining"
				android:textStyle="bold"
				android:padding="4dp"
				android:textAppearance="?android:attr/textAppearanceSmall" />

			<Spinner
				android:id="@+id/selectTraining"
				android:layout_width="240dp"
				android:layout_height="wrap_content" />

		</TableRow>

		<TableRow
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" >

			<TextView
				android:layout_width="160dp"
				android:layout_height="wrap_content"
				android:text="@string/labelTeam"
				android:textStyle="bold"
				android:padding="4dp"
				android:textAppearance="?android:attr/textAppearanceSmall" />

			<Spinner
				android:id="@+id/selectTeam"
				android:layout_width="240dp"
				android:layout_height="wrap_content" />

		</TableRow>

		<TableRow
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
		>
			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_span="2"
				style="@android:attr/buttonBarStyle"
			>

				<Button
					android:id="@+id/buttonSave"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingLeft="20dp"
					android:paddingRight="20dp"
					style="@android:attr/buttonBarButtonStyle"
					android:background="@drawable/button_blue"
					android:text="@string/labelSave" />

				<Button
					android:id="@+id/buttonHire"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingLeft="20dp"
					android:paddingRight="20dp"
					style="@android:attr/buttonBarButtonStyle"
					android:background="@drawable/button_red"
					android:text="@string/labelHire" />

				<Button
					android:id="@+id/buttonFire"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingLeft="20dp"
					android:paddingRight="20dp"
					style="@android:attr/buttonBarButtonStyle"
					android:background="@drawable/button_red"
					android:text="@string/labelFire" />

				<Button
					android:id="@+id/buttonAccount"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingLeft="20dp"
					android:paddingRight="20dp"
					style="@android:attr/buttonBarButtonStyle"
					android:background="@drawable/button_green"
					android:text="@string/labelAccountStatement" />

			</LinearLayout>

		</TableRow>

	</TableLayout>

</merge>
