<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="horizontal" >

	<include
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_alignParentLeft="true"
		layout="@layout/element_dailytask_icons" />

	<TextView
	    android:id="@+id/textViewPresentation"
		android:padding="4dp"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_toRightOf="@id/messageIcon"
		android:layout_toLeftOf="@id/messageImage"
		android:layout_below="@id/messageText"
	/>

	<TableLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/textViewPresentation"
		android:layout_toRightOf="@id/messageIcon"
		android:layout_toLeftOf="@id/messageImage"
	>

		<TableRow
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			>

			<TextView
				android:padding="4dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/labelTheOffer"
				android:textStyle="bold"
				 />

			<TextView
				android:padding="4dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/labelSalary"
				 />

			<EditText
				android:id="@+id/editSalary"
				android:inputType="numberDecimal"
				android:layout_height="wrap_content"
				android:layout_width="100dp"
				/>

			<TextView
				android:padding="4dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/labelVacation"
				 />

			<EditText
				android:id="@+id/editVacation"
				android:inputType="numberDecimal"
				android:layout_height="wrap_content"
				android:layout_width="100dp"
				/>

		</TableRow>

		<TableRow
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			>

			<TextView
				android:layout_column="1"
				android:padding="4dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/labelBonus"
				 />

			<EditText
				android:id="@+id/editBonus"
				android:inputType="numberDecimal"
				android:layout_height="wrap_content"
				android:layout_width="100dp"
				/>

			<TextView
				android:padding="4dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/labelCar"
				 />

			<Spinner
				android:id="@+id/selectCar"
				android:layout_width="160dp"
				android:layout_height="wrap_content" />

		</TableRow>

		<TableRow
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" >

			<TextView
				android:layout_column="1"
				android:padding="4dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/labelTeam"
				android:textStyle="bold"
				android:textAppearance="?android:attr/textAppearanceSmall" />

			<Spinner
				android:id="@+id/selectTeam"
				android:layout_width="100dp"
				android:layout_height="wrap_content" />

			<Button
				android:layout_column="5"
				style="?android:attr/buttonBarButtonStyle"
				android:layout_width="100dp"
				android:layout_height="wrap_content"
				android:background="@drawable/button_blue"
				android:text="@string/labelOffer"
				android:onClick="dailyBusinessOffer"
				/>
			
		</TableRow>
		
		<TableRow
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			>

			<TextView
				android:padding="4dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/labelDeny"
				android:textStyle="bold"
				 />

			<Button
				android:layout_column="5"
				style="?android:attr/buttonBarButtonStyle"
				android:layout_width="100dp"
				android:layout_height="wrap_content"
				android:background="@drawable/button_red"
				android:text="@string/labelDeny"
				android:onClick="dailyBusinessDeny"
				/>

		</TableRow>

	</TableLayout>

</RelativeLayout>
