<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:baselineAligned="false"
>

    <include
        android:id="@+id/status_bar_include"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        layout="@layout/element_status_bar" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/status_bar_include"
        android:text="@string/labelCarTypes"
        android:textAppearance="?android:attr/textAppearanceLarge"
        style="@style/BlockHeadline"
    />

    <ImageView
        android:id="@+id/imageView1"
        android:src="@drawable/car"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:layout_below="@id/textView1"
        android:layout_alignParentLeft="true"
        android:contentDescription="@string/imageDescription"
    />

    <TableLayout
        android:id="@+id/tableCarTypes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView1"
        android:layout_toRightOf="@id/imageView1"
    >

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

		    <TextView
		        android:layout_width="120dp"
		        android:layout_height="wrap_content"
		        android:textStyle="bold"
		        android:padding="4dp"
		        android:text="@string/labelCarModel"
		        android:textAppearance="?android:attr/textAppearanceSmall" />

		    <TextView
		        android:id="@+id/textViewName"
		        android:layout_width="160dp"
		        android:layout_height="wrap_content"
		        android:padding="4dp"
		        android:textAppearance="?android:attr/textAppearanceSmall" />

		    <TextView
		        android:layout_width="180dp"
		        android:layout_height="wrap_content"
		        android:textStyle="bold"
		        android:padding="4dp"
		        android:text="@string/labelMaxSpeed"
		        android:textAppearance="?android:attr/textAppearanceSmall" />

		    <TextView
		        android:id="@+id/textViewMaxSpeed"
		        android:layout_width="160dp"
		        android:layout_height="wrap_content"
		        android:padding="4dp"
		        android:textAppearance="?android:attr/textAppearanceSmall" />

		</TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

		    <TextView
		        android:layout_width="120dp"
		        android:layout_height="wrap_content"
		        android:textStyle="bold"
		        android:padding="4dp"
		        android:text="@string/labelClass"
		        android:textAppearance="?android:attr/textAppearanceSmall" />

		    <TextView
		        android:id="@+id/textViewClass"
		        android:layout_width="160dp"
		        android:layout_height="wrap_content"
		        android:padding="4dp"
		        android:textAppearance="?android:attr/textAppearanceSmall" />

		    <TextView
		        android:layout_width="180dp"
		        android:layout_height="wrap_content"
		        android:textStyle="bold"
		        android:padding="4dp"
		        android:text="@string/labelPower"
		        android:textAppearance="?android:attr/textAppearanceSmall" />

		    <TextView
		        android:id="@+id/textViewPower"
		        android:layout_width="160dp"
		        android:layout_height="wrap_content"
		        android:padding="4dp"
		        android:textAppearance="?android:attr/textAppearanceSmall" />
		    
		</TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

		    <TextView
		        android:layout_width="120dp"
		        android:layout_height="wrap_content"
		        android:textStyle="bold"
		        android:padding="4dp"
		        android:text="@string/labelTaxInsurance"
		        android:textAppearance="?android:attr/textAppearanceSmall" />

		    <TextView
		        android:id="@+id/textViewTaxInsurance"
		        android:layout_width="160dp"
		        android:layout_height="wrap_content"
		        android:padding="4dp"
		        android:textAppearance="?android:attr/textAppearanceSmall" />

		    <TextView
		        android:layout_width="180dp"
		        android:layout_height="wrap_content"
		        android:textStyle="bold"
		        android:padding="4dp"
		        android:text="@string/labelCylinders"
		        android:textAppearance="?android:attr/textAppearanceSmall" />

		    <TextView
		        android:id="@+id/textViewCylinders"
		        android:layout_width="160dp"
		        android:layout_height="wrap_content"
		        android:padding="4dp"
		        android:textAppearance="?android:attr/textAppearanceSmall" />
		    
		</TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

		    <TextView
		        android:layout_width="120dp"
		        android:layout_height="wrap_content"
		        android:textStyle="bold"
		        android:padding="4dp"
		        android:text="@string/labelPrice"
		        android:textAppearance="?android:attr/textAppearanceSmall" />

		    <TextView
		        android:id="@+id/textViewPrice"
		        android:layout_width="160dp"
		        android:layout_height="wrap_content"
		        android:padding="4dp"
		        android:textAppearance="?android:attr/textAppearanceSmall" />

		    <TextView
		        android:layout_width="180dp"
		        android:layout_height="wrap_content"
		        android:textStyle="bold"
		        android:padding="4dp"
		        android:text="@string/labelCapacity"
		        android:textAppearance="?android:attr/textAppearanceSmall" />

		    <TextView
		        android:id="@+id/textViewCapacity"
		        android:layout_width="160dp"
		        android:layout_height="wrap_content"
		        android:padding="4dp"
		        android:textAppearance="?android:attr/textAppearanceSmall" />
		    
		</TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

		    <Button 
		        android:id="@+id/button1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/labelBuy"
		        android:background="@drawable/button_green"
		        android:padding="10dp"
		        />

		</TableRow>

    </TableLayout>

	<ListView
	    android:id="@+id/listCarTypes"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_alignParentLeft="true"
	    android:layout_below="@id/tableCarTypes"
	/>

</RelativeLayout>
