<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

	<TableRow
		android:id="@+id/tableRowOffer"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/labelNegotiate"
			android:textStyle="bold"
			android:padding="4dp"
			android:textAppearance="?android:attr/textAppearanceSmall" />

		<LinearLayout
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		>

	        <TextView
				android:id="@+id/textViewDescriptionOffer"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/labelTheOffer"
	            android:padding="4dp"
	            android:textAppearance="?android:attr/textAppearanceSmall"
	        />

	        <EditText
	            android:id="@+id/editTextOffer"
	            android:layout_width="100dp"
	            android:layout_height="wrap_content"
	            android:padding="4dp"
	            android:inputType="numberDecimal"
			/>

		</LinearLayout>

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_blue"
            android:text="@string/labelOffer"
            android:onClick="dailyBusinessOffer"
            />

    </TableRow>

</merge>
